[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A script to fetch and filter research papers from PubMed."
authors = ["Your Name <your.email@example.com>"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28"
argparse = "^1.4.0"

[tool.poetry.scripts]
get-papers-list = "cli:main"
